# rdum

./: .gitignore  Cargo.toml  README.md  build.rs  copy_samples.sh
embedded_controller/: hardware.py  keyboard_input.py  main.py  modules.py  pyproject.toml  util.py  widgets.py  zmq_channel.py  zmq_test_channel.py  zmq_test_receiver.py
embedded_controller/proto_gen/: state_pb2.py
proto/: state.proto
src/: controller.rs  display.rs  main.rs  sequencer.rs
src/controller/: cli.rs  mod.rs  web.rs  zeromq.rs
webui/: README.md  index.html  mock-server.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
webui/src/: main.ts
webui/src/components/: drum-machine-app.ts  drum-pad.ts  drum-track.ts  machine-info.ts  pattern-selector.ts  theme-switch.ts  transport-controls.ts
webui/src/models/: types.ts
webui/src/services/: websocket-service.ts
webui/src/styles/: main.css
