[package]
name = "rdum"
version = "0.1.0"
edition = "2021"

# Enable build script for protobuf compilation
build = "build.rs"

[dependencies]
rodio = { version = "0.20.1", features = ["symphonia-wav"] }
midir = "0.10.1"
crossterm = "0.28.1"
spin_sleep = "1.3.0"
ratatui = "0.29.0"
# Protocol Buffers dependencies
prost = "0.13.5"
prost-types = "0.13.5"
# ZeroMQ dependency
zmq = "0.10.0"
# Async dependencies
tokio = { version = "1.45.1", features = ["full"] }
async-tungstenite = { version = "0.29.1", features = ["tokio-runtime"] }
futures = "0.3.31"
# JSON serialization
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }


[build-dependencies]
prost-build = "0.13.5"