[project]
name = "rdum-embedded-controller"
version = "0.1.0"
description = "Embedded controller for the RDUM drum machine (CircuitPython libs on Raspberry Pi 5)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gpiozero>=2.0.1",
    "adafruit-blinka>=8.58.1",
    "adafruit-circuitpython-ssd1306>=2.12.20",
    "Adafruit-Blinka-Raspberry-Pi5-rp1pio>=1.0.0rc1",
    "adafruit-circuitpython-pioasm>=1.3.3",
    "adafruit_ssd1306>=1.6.2",
    "adafruit_circuitpython_mcp3xxx>=1.4.20",
    "gpiod>=2.3.0",
    "lgpio>=0.2.2",
    "pyzmq>=26.4.0",
    "protobuf>=5.29.3",
    "pillow>=11.2.1",
]